feat: double click in file chooser opens file
Double click opens file in file chooser. Datasets component UI element
expanded after loading a dataset.